fix spacing

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ body {
 
 .icon-img {
   width: auto;
-  height: 24px;
+  height: 24px !important;
   max-width: none;  /* override .section img */
   margin-right: 8px;
   vertical-align: middle;
